@@ -1,11 +1,11 @@
 .TP
-\fB\-f\fR, \fB\-\-flush\-cache\fR
+\fB\-\-flush\-cache\fR
 Flush a cached version of the sensor data repository (SDR) cache.  The
 SDR is typically cached for faster subsequent access.  However, it may
 need to be flushed and re-generated if the SDR has been updated on a
 system.
 .TP
-\fB\-Q\fR, \fB\-\-quiet\-cache\fR
+\fB\-\-quiet\-cache\fR
 Do not output information about cache creation/deletion.  May be
 useful in scripting.
 .TP
